--- a/README.Rmd
+++ b/README.Rmd
@@ -7,17 +7,15 @@ editor_options:
 <!-- README.md is generated from README.Rmd. Please edit that file -->
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE}
-knitr::opts_chunk$set(message=FALSE, comment="#>")
+knitr::opts_chunk$set(message=FALSE, warning=FALSE, comment="")
 devtools::load_all(".")
 library(igraph)
 library(hypeR)
-library(magrittr)
-library(dplyr)
-library(ggplot2)
 ```
 
 # hypeR Network Extension
 
+[![hypeR](https://img.shields.io/badge/montilab-hypeR-0770d9?labelColor=000000)](https://github.com/montilab/hypeR)
 [![](https://lifecycle.r-lib.org/articles/figures/lifecycle-experimental.svg)](https://www.tidyverse.org/lifecycle/#experimental)
 [![](https://img.shields.io/github/last-commit/montilab/hypeR-next.svg)](https://github.com/montilab/hypeR-next/commits/master)
 
@@ -29,25 +27,31 @@ An extension of hypeR for network enrichment through random walks.
 devtools::install_github("montilab/hypeR-next")
 ```
 
-```{r, echo=FALSE, message=FALSE, warning=FALSE}
-library(hypeR_next)
+```{r, eval=FALSE}
+library(hypeR.next)
 ```
 
-### Simulated Network Communities
-
-To get a sense of how this works, there is a simulated network with modular scale-free properties available. The object already has pre-defined communities that have been populated with genes from highly specific biological pathways. This data was generated through the following steps:
-
-1. Simulate a graph structure through the Lancichinetti–Fortunato–Radicchi (LFR) benchmark model
-2. Detect and define communities within the graph
-3. For each community sample node labels from a biological pathway (80%) / random (20%)
-
-```python
-LFR(n=600, tau1=2.7, tau2=2, mu=0.1, min_community=25, max_community=75)
-```
+### Data
 
 ```{r}
 data(ig)
-print(ig)
+```
+
+This package works with undirected `igraph` objects or extensions of `igraph` objects.
+
+```{r}
+is(ig)
+```
+
+The following vertex attributes are expected at a minimum.
+
+- `name` - Unique node labels
+- `symbol` - Node symbols corresponding to the genesets you use  
+- `community`- Pre-detected community labels  
+- `color` - Community-specific colors  
+
+```{r}
+head(igraph::as_data_frame(ig, what="vertices"))
 ```
 
 ```{r, fig.width=12, fig.height=6}
@@ -61,7 +65,7 @@ layout <- igraph::layout_with_graphopt(ig,
                                        spring.constant=1, 
                                        max.sa.movement=5)
 
-par(mar=c(0,0,0,0), mfrow=c(1,2))
+par(mar=c(0,0,0,0))
 plot(ig,
      vertex.size=4,
      vertex.color="grey",
@@ -69,58 +73,9 @@ plot(ig,
      vertex.label=NA,
      edge.width=1,
      layout=layout)
-
-plot(ig,
-     vertex.size=4,
-     vertex.color="#EEEEEE",
-     vertex.frame.color=adjustcolor("#000000", alpha.f=0.2),
-     vertex.label=V(ig)$name,
-     vertex.label.family="Helvetica",
-     vertex.label.color="black",
-     vertex.label.font=2,
-     vertex.label.cex=0.4,
-     vertex.label.dist=0,
-     edge.width=1,
-     layout=layout)
 ```
 
-The only thing your graph needs is unique node symbols that correspond to the genesets you're testing against.
-
-```{r}
-head(V(ig)$name)
-```
-
-You need to perform some type of community detection. There are many algorithms but I prefer defining community structure through random walks. Walktrap looks for densely connected subgraphs through random walks at varying lengths. Whatever algorithm you use, make sure to label the nodes with their designated community through `V(ig)$community`.
-
-```{r, eval=FALSE}
-set.seed(1)
-ig.c <- igraph::walktrap.community(ig, steps=10)
-V(ig)$community <- ig.c$membership
-```
-
-```{r}
-table(V(ig)$community)
-```
-
-We can visualize the communities which seem well-defined. Not surprisingly since this example data was defined to be particularly modular for demonstration purposes.
-
-```{r, fig.width=6, fig.height=6}
-par(mar=c(0,0,0,0))
-plot(ig,
-     vertex.size=5,
-     vertex.label=V(ig)$community,
-     vertex.label.family="Helvetica",
-     vertex.label.color="white",
-     vertex.label.font=2,
-     vertex.label.cex=0.6,
-     vertex.label.dist=0,  
-     edge.width=1,
-     layout=layout)
-```
-
-### Community Enrichment
-
-Enrichment is performed independently for each community. Rather than performing enrichment just on the community members, we want to account for neighboring members outside but within close proximity to the community. Therefore we perform network propagation seeded with the community neighbors and performing enrichment on highly traversed portions of the graph.
+### Network characterization through random walks
 
 ```{r}
 library(hypeR)
@@ -128,165 +83,24 @@ genesets <- hypeR::msigdb_gsets("Homo sapiens", "H", clean=TRUE)
 ```
 
 ```{r}
-data <- do_community(ig, community="16", genesets, restart=0.5, plotting=TRUE)
+ig.e <- enrich_communities_static(ig, genesets, restart=0.5, fdr=0.01, top=1)
 ```
 
-```{r, fig.width=6, fig.height=6}
+```{r, fig.width=12, fig.height=8}
 par(mar=c(0,0,0,0))
-ig.c <- data$ig
-plot(ig.c,
-     vertex.size=4,
-     vertex.color=V(ig.c)$pcolor,
-     vertex.label=NA,
-     edge.width=1,
-     layout=layout)
-```
-
-After traversing the network, we can define a ranked signature for this community - sort of like an extended signature - based on the most traversed nodes in the network.
-
-```{r}
-signature.ranked <- V(ig.c)$p
-names(signature.ranked) <- V(ig.c)$name
-head(sort(signature.ranked, decreasing=TRUE))
-```
-
-This happens implicitly within this function.
-
-```{r}
-hyp.c <- data$hyp
-```
-
-```{r}
-hyp.c$plots$`Dna Repair`
-```
-
-```{r}
-hypeR::hyp_dots(hyp.c)
-```
-
-The most important parameter will be the `restart` probability of the random walks. This tells the algorithm how long the walks should be and is the probability of the random walk restarting from the community. In otherwords, this will define how fuzzy your extended signature for a given community will be.
-
-```{r, fig.width=12, fig.height=12}
-par(mar=c(0,0,0,0), mfrow=c(2,3))
-for (restart in c(0.75, 0.5, 0.25, 0.1, 0.05, 0)) {
-    data <- do_community(ig, community="16", genesets, restart=restart)
-    ig.c <- data$ig
-    plot(ig.c,
-         vertex.size=4,
-         vertex.color=V(ig.c)$pcolor,
-         vertex.label=NA,
-         edge.width=1,
-         layout=layout)
-    title(paste0("restart = ", restart), cex.main=2, font.main=4, line=-3)
-}
-```
-
-### Visualizing Results
-
-One way to visualize enrichment of the network would be to repeat the above process for each community
-
-```{r}
-communities <- names(table(V(ig)$community))
-lhyp <- mapply(function(community) {
-    data <- do_community(ig, community=community, genesets, restart=0.5)
-    return(data$hyp)
-}, communities, SIMPLIFY=FALSE, USE.NAMES=FALSE)
-names(lhyp) <- paste0("C", communities)
-
-mhyp <- hypeR::multihyp$new(data=lhyp)
-hypeR::hyp_dots(mhyp, merge=TRUE, top=50, fdr=0.01)
-```
-
-Although we can also visualize the enrichment on the graph itself, which will give some perspective on why some communities close to each other might be enriched for similar pathways.
-
-```{r}
-ig.e <- do_enrichment(ig, genesets, restart=0.5, fdr=0.01, top=1)
-```
-
-```{r, fig.width=6, fig.height=6}
-par(mar=c(0,0,0,0))
-set.seed(2)
+set.seed(1234)
 plot(ig.e,
      vertex.size=5,
-     vertex.label=V(ig.e)$annotation,
-     vertex.color=adjustcolor(V(ig.e)$color, alpha.f=0.4),
-     vertex.frame.color=adjustcolor("#000000", alpha.f=0.1),
-     vertex.label.family="Helvetica",
-     vertex.label.color="black",
-     vertex.label.font=2,
-     vertex.label.cex=0.7,
-     vertex.label.dist=runif(vcount(ig.e), -1, 1),
-     edge.width=0,
-     layout=layout)
-```
-
-### Signature Extension
-
-Using similar methods, we can take a pre-defined signature, and contextualize it based on the existing network structure. We can see which signature genes are present in the network, which signature genes are most central, or which non-signature genes are within close proximity.
-
-Let's pretend our signature happened to be a bunch of genes one one of our simulated communities...
-
-```{r}
-signature <- c("ATP2B1", "KLF6", "IL1A", "CD69", "GCH1", "MXD1", "F3")
-```
-
-```{r}
-data <- do_signature(ig, signature, restart=0.5)
-```
-
-Here we can visualize the propagation throughout the network from the signature.
-
-```{r, fig.width=6, fig.height=6}
-ig.e <- data$ig
-
-par(mar=c(0,0,0,0))
-plot(ig.e,
-     vertex.size=4,
-     vertex.color=V(ig.e)$pcolor,
-     vertex.label=NA,
-     edge.width=1,
-     layout=layout)
-```
-
-Here we return the new signature based on the ranked propagation from the original signature.
-
-```{r}
-df <- data$signature %>%
-      data.frame(name=names(.), p=.) %>%
-      dplyr::arrange(desc(p)) %>%
-      dplyr::mutate(np=normalize_range(p, 0, 1)) %>%
-      dplyr::mutate(original_signature=name %in% signature)
-
-head(df, 10)
-```
-
-The original signature will likely have the most propagation values (because that is the seed), but we can find other genes with high propagation values close to the signature within the network.
-
-```{r}
-p <- df %>%
-    dplyr::filter(!original_signature) %>%
-    head(25) %>%
-    dplyr::mutate(name=factor(name, levels=name)) %>%
-    ggplot(aes(x=name, y=np, fill=p))  +
-    geom_bar(stat="identity") +
-    labs(x="", y="Normalized Propogation") +
-    scale_fill_viridis_c() +
-    theme(axis.text.x=element_text(angle=45, vjust=1, hjust=1))
-
-p
-```
-
-```{r, fig.width=6, fig.height=6}
-par(mar=c(0,0,0,0))
-plot(ig.e,
-     vertex.size=3,
-     vertex.color=V(ig.e)$pcolor,
-     vertex.frame.color=adjustcolor("#000000", alpha.f=0.5),
-     vertex.label=ifelse(V(ig.e)$p > 0.01, V(ig.e)$name, NA),
+     vertex.label=V(ig.e)$enrichment,
+     vertex.color=adjustcolor(V(ig.e)$color, alpha.f=0.6),
+     vertex.frame.color=adjustcolor("#000000", alpha.f=0),
      vertex.label.family="Helvetica",
      vertex.label.color="black",
      vertex.label.font=2,
      vertex.label.cex=0.8,
-     edge.width=1,
+     vertex.label.dist=runif(vcount(ig.e), -0.25, 0.25),
+     edge.color=adjustcolor("#000000", alpha.f=0.2),
      layout=layout)
 ```
+
+Please read the documentation for a comprehensive overview of functionality.
